--- a/app/src/main/res/layout/activity_anti_virus.xml
+++ b/app/src/main/res/layout/activity_anti_virus.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <!--Toolbar-->
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/anti_virus_tool_bar"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_antivirus"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tool_bar_height"
-        app:popupTheme="@style/MyOptionMenuStyle"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:background="?attr/colorPrimary"
-        android:minHeight="@dimen/tool_bar_height" />
+        android:layout_height="wrap_content">
+        <!--Toolbar-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/anti_virus_tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tool_bar_height"
+            android:background="?attr/colorPrimary"
+            android:minHeight="@dimen/tool_bar_height"
+            app:popupTheme="@style/MyOptionMenuStyle"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+    </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
         android:id="@+id/rl_anti_head"
         android:layout_width="match_parent"
         android:layout_height="80dip"
-        android:layout_below="@id/anti_virus_tool_bar">
+        android:layout_below="@id/app_bar_antivirus">
 
         <FrameLayout
             android:id="@+id/fl_anti_icon"
@@ -62,9 +67,9 @@
 
                 <ProgressBar
                     android:id="@+id/pb_anti_progress"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    style="@android:style/Widget.ProgressBar.Horizontal"/>
+                    android:layout_height="10dp" />
             </FrameLayout>
         </LinearLayout>
     </RelativeLayout>
